--- a/hocus/index.html
+++ b/hocus/index.html
@@ -1,8 +1,5 @@
 ---
-layout: post
-title: "Statistical Inference 5~8"
-date: 2016-01-11 11:51:00
-categories: Math
+layout: default
 ---
 
 <div class="home">
