--- a/games/hocus/canvas.html
+++ b/games/hocus/canvas.html
@@ -13,7 +13,28 @@ categories: Game
 var canvas = document.getElementById("canvas");
 var ctx = canvas.getContext("2d");
 
-var sqrt3 = Math.sqrt(3.0) / 2;
+var xa = -Math.sqrt(3)/2;
+var xb = -1/2;
+
+var ya = Math.sqrt(3)/2;
+var yb = -1/2;
+
+/*
+var xa = -1;
+var xb = -1;
+
+var ya = 1;
+var yb = 0;
+*/
+
+/*
+var xa = -1/2;
+var xb = -1/2;
+
+var ya = 1/2;
+var yb = -1/2;
+*/
+
 function drawTriangle(x0, y0, x1, y1, x2, y2, color) {
   ctx.beginPath();
   ctx.moveTo(x0, y0);
@@ -27,22 +48,22 @@ function drawLine(x0, y0, x1, y1, color) {
   ctx.beginPath();
   ctx.moveTo(x0, y0);
   ctx.lineTo(x1, y1);
-  ctx.strokeStyle = color
+  ctx.strokeStyle = color;
   ctx.stroke();
 }
 
 function drawCube(x, y, h) {
   var len = 50;
-  z0 = (y - x);
-  z1 = (x + y);
-  x = canvas.width / 2 + z0 * sqrt3 * len;
-  y = canvas.height / 2 + z1 * len / 2;
-  var ps = [x - sqrt3 * len, y - len / 2,
+  nx = canvas.width / 2 + (x * xa + y * ya) * len;
+  ny = canvas.height / 2 - (x * xb + y * yb) * len;
+  x = nx;
+  y = ny;
+  var ps = [x - ya * len, y + yb * len,
             x, y - len,
-            x + sqrt3 * len, y - len / 2,
-            x + sqrt3 * len, y + len / 2,
+            x - xa * len, y + xb * len,
+            x + ya * len, y - yb * len,
             x, y + len,
-            x - sqrt3 * len, y + len / 2];
+            x + xa * len, y - xb * len];
   if(h[0]) drawTriangle(x, y, ps[0], ps[1], ps[2], ps[3], "#EFEFEF");
   if(h[1]) drawTriangle(x, y, ps[2], ps[3], ps[4], ps[5], "#EFEFEF");
   if(h[2]) drawTriangle(x, y, ps[4], ps[5], ps[6], ps[7], "#AFAFAF");
@@ -80,6 +101,8 @@ drawCube(-1, -1, [0,0,1,1,1,1]);
 drawCube(-2, -2, [0,0,1,1,1,1]);
 drawCube(-3, -3, [0,0,1,1,1,0]);
 
+
+//drawCube(0, 0, [1,1,1,1,1,1]);
 
 
 
